--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3103,13 +3103,13 @@ caption {
   object-fit: cover;
   border: 4px solid var(--color-bg-tertiary);
   box-shadow: var(--shadow-md);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.5s ease;
 }
 
 .avatar-image:hover {
   transform: rotate(360deg);
-  border-color: var(--color-accent);
-  box-shadow: var(--shadow-lg);
+  /* border-color: var(--color-accent); */
+  /* box-shadow: var(--shadow-lg); */
 }
 
 .profile-info {
